fix[style]: adds align items navbar

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -6,6 +6,7 @@
   font-size: 32px;
   margin: 0;
   margin-top: 32px;
+  align-items: center;
 }
 
 .nav-links li a {
