--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -30,7 +30,7 @@ main {
   color: var(--text-light);
   display: flex;
   flex-direction: column;
-  max-width: 58vh;
+  width: 500px;
 }
 
 .im-guilherme {
